--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ keywords: 知识库，Knowledge Base
                 <div class="component">
                     <a href="{{ component.url }}" target="_blank">
                         <div class="component-icon">
-                            <img src="{{ component.avatar | prepend: "/_assets/images/avatar/" | relative_url }}" alt="{{ component.title }}">
+                            <img src="{{ component.avatar | prepend: "/.assets/images/avatar/" | relative_url }}" alt="{{ component.title }}">
                         </div>
                         <h3 id="{{ component.id }}">{{ component.title }}</h3>
                     </a>
